<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="Set Date and Time to send message"
        android:paddingTop="15dp"
        android:paddingLeft="7dp"
        />     
  	<LinearLayout
  	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
  	    <TextView
  	        android:id="@+id/dateDisplay"
  	        android:layout_width="fill_parent"
  	        android:layout_height="wrap_content"
  	        android:layout_weight="1"
  	        android:gravity="center_horizontal"
 	        android:text="@string/date_default"
  	        />
	    <Button
	        android:id="@+id/setDate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/date_button" />
    </LinearLayout>
    
  	<LinearLayout
  	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
  	    <TextView
  	        android:id="@+id/timeDisplay"
  	        android:layout_width="fill_parent"
  	        android:layout_height="wrap_content"
  	        android:layout_weight="1"
  	        android:gravity="center_horizontal"
  	        android:text="@string/time_default" 
  	        />
	    <Button
	        android:id="@+id/setTime"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/time_button" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        >
	    <EditText 
	        android:id="@+id/txtPhoneNo"  
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_horizontal"
	        android:paddingLeft="7dp"
	        android:singleLine="true"
	    	android:imeOptions="actionNext"    
	    	android:inputType="phone"  
	    	android:hint="@string/hint_number" 
	        />

	    <Button
	        android:id="@+id/getContact"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/contact_button" />

    </LinearLayout>
    <EditText 
        android:id="@+id/txtMessage"  
        android:layout_width="fill_parent" 
        android:layout_height="150dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="top"         
        android:inputType="text"
        android:hint="@string/hint_msg"
        />          
    <Button 
        android:id="@+id/btnSendSMS"  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        />    
</LinearLayout>